# schoolproject

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  RenderWindow.cpp  RenderWindow.h  Visual_Object.h  VulkanWindow.cpp  VulkanWindow.h  color_frag.spv  color_vert.spv  main.cpp  opg1.cpp  opg1.h  opg2.cpp  opg2.h  opg3.cpp  opg3.h  qtcsettings.cmake  vertex.cpp  vertex.h  vktriangle.cpp  vktriangle.h  vktrianglesurface.cpp  vktrianglesurface.h
